# arcs

./: .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE_MIT.md  README.md  aliases.js  index.html  release.toml  search-index.js  settings.html  source-files.js
ahash/: all.html  index.html  sidebar-items.js  struct.ABuildHasher.html  struct.AHasher.html  struct.RandomState.html
anyhow/: index.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
approx/: index.html  macro.assert_abs_diff_eq.html  macro.assert_abs_diff_ne.html  macro.assert_relative_ne.html  macro.assert_ulps_ne.html  macro.relative_eq.html  macro.ulps_eq.html  macro.ulps_ne.html  struct.AbsDiff.html  struct.Relative.html  struct.Ulps.html  trait.AbsDiffEq.html  (+2 more)
arcs/: .gitignore  Cargo.toml  LICENSE_APACHE.md  LICENSE_MIT.md  all.html  deny.toml  enum.CanvasSpace.html  enum.DrawingSpace.html  enum.Orientation.html  fn.centre_of_three_points.html  index.html  macro.decl_component!.html  sidebar-items.js  struct.BoundingBox.html  struct.Line.html  struct.Vector.html  type.Angle.html  type.Arc.html  type.Length.html  type.Line.html  type.Point.html  type.Transform.html  type.Vector.html
arcs/algorithms/: enum.Closest.html  fn.simplify.html  index.html  sidebar-items.js  struct.ApproximatedArc.html  trait.AffineTransformable.html  trait.Approximate.html  trait.Bounded.html  trait.ClosestPoint.html  trait.Length.html  trait.Scale.html  trait.ScaleNonUniform.html  trait.Translate.html
arcs/algorithms/affine_transform/: trait.AffineTransformable.html
arcs/algorithms/length/: trait.Length.html
arcs/algorithms/scale/: trait.Scale.html
arcs/algorithms/scale_non_uniform/: trait.ScaleNonUniform.html
arcs/arc/: struct.Arc.html
arcs/commands/: index.html  sidebar-items.js  struct.Builder.html  struct.ChangeRecorder.html  struct.UndoRedoBuffer.html  struct.UndoRedoError.html  trait.Command.html  trait.CommandContext.html
arcs/commands/changes/: struct.ChangeRecorder.html  struct.ChangeSet.html
arcs/commands/undo_redo_buffer/: struct.UndoRedoError.html
arcs/components/: enum.Dimension.html  enum.Geometry.html  fn.attached_to_entity.html  fn.register.html  index.html  sidebar-items.js  struct.BoundingBox.html  struct.ComponentVtable.html  struct.DrawingObject.html  struct.Layer.html  struct.LineStyle.html  struct.Name.html  struct.NameTable.html  struct.PointStyle.html  struct.Selected.html  struct.Viewport.html  struct.WindowStyle.html
arcs/components/bounding_box/: struct.BoundingBox.html
arcs/components/dimension/: enum.Dimension.html
arcs/components/drawing_object/: enum.Geometry.html  struct.DrawingObject.html
arcs/components/layer/: struct.Layer.html
arcs/components/name/: struct.NameTable.html
arcs/components/selected/: struct.Selected.html
arcs/components/styles/: struct.LineStyle.html  struct.WindowStyle.html
arcs/components/viewport/: struct.Viewport.html
arcs/components/vtable/: struct.ComponentVtable.html
arcs/examples/: render_to_image.rs
arcs/line/: struct.Line.html
arcs/primitives/: index.html  struct.Arc.html  struct.Line.html  struct.Point.html
arcs/primitives/line/: struct.Line.html
arcs/primitives/point/: struct.Point.html
arcs/render/: fn.to_canvas_coordinates.html  fn.to_drawing_coordinates.html  fn.transform_to_canvas_space.html  fn.transform_to_drawing_space.html  index.html  sidebar-items.js  struct.Renderer.html  struct.Viewport.html
arcs/render/renderer/: struct.Renderer.html
arcs/render/utils/: fn.to_canvas_coordinates.html  fn.to_drawing_coordinates.html  fn.transform_to_canvas_space.html  fn.transform_to_drawing_space.html  struct.Viewport.html
arcs/src/: arc.rs  lib.rs  line.rs  transform.rs  types.rs  vector.rs
arcs/src/algorithms/: affine_transform.rs  approximate.rs  bounding_box.rs  closest_point.rs  fillet.rs  length.rs  line_simplification.rs  mod.rs  scale.rs  scale_non_uniform.rs  translate.rs
arcs/src/commands/: changes.rs  mod.rs  undo_redo_buffer.rs
arcs/src/components/: bounding_box.rs  dimension.rs  drawing_object.rs  layer.rs  mod.rs  name.rs  selected.rs  spatial_entity.rs  styles.rs  viewport.rs  visual.rs  vtable.rs
arcs/src/primitives/: arc.rs  line.rs  mod.rs  point.rs
arcs/src/render/: mod.rs  renderer.rs  utils.rs  viewport.rs
arcs/src/systems/: bounds.rs  mod.rs  name_table_bookkeeping.rs  spatial_relation.rs
arcs/src/window/: mod.rs  utils.rs  window.rs
arcs/systems/: fn.register_background_tasks.html  index.html  struct.NameTableBookkeeping.html  struct.SyncBounds.html
arcs/systems/bounds/: struct.SyncBounds.html
arcs/systems/name_table_bookkeeping/: struct.NameTableBookkeeping.html
arcs/types/: enum.DrawingSpace.html  fn.centre_of_three_points.html  type.Angle.html  type.Point.html  type.Transform.html  type.Vector.html
arcs/window/: fn.to_canvas_coordinates.html  fn.to_drawing_coordinates.html  fn.transform_to_canvas_space.html  fn.transform_to_drawing_space.html  index.html  sidebar-items.js  struct.Window.html
arcs/window/utils/: fn.to_canvas_coordinates.html  fn.to_drawing_coordinates.html  fn.transform_to_canvas_space.html  fn.transform_to_drawing_space.html
arcs/window/window/: struct.Window.html
core/: Cargo.toml
core/src/: bounding_box.rs  lib.rs  orientation.rs  types.rs  vector.rs
core/src/algorithms/: affine_transform.rs  approximate.rs  bounding_box.rs  closest_point.rs  length.rs  line_simplification.rs  mod.rs  scale.rs  scale_non_uniform.rs  translate.rs
core/src/components/: layer.rs  mod.rs  name.rs  visual.rs
core/src/primitives/: arc.rs  interpolated_spline.rs  line.rs  mod.rs
demo/: Cargo.toml  Makefile.toml  README.md  index.html
demo/src/: lib.rs
demo/src/modes/: add_arc_mode.rs  add_line_mode.rs  add_point_mode.rs  idle.rs  mod.rs
render/: Cargo.toml
render/src/: canvas.rs  html5_canvas.rs  lib.rs  pixel.rs  point.rs  renderable.rs  viewport.rs
wasm-demo/: .gitignore  Cargo.toml  README.md  package.json
wasm-demo/src/: app.rs  lib.rs  msg.rs
wasm-demo/static/: index.html  master.css
wasm-demo/tests/: app.rs
(+4686 files in other folders)
