[package]
name = "arcs"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Facade crate for the arcs CAD library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.8"
piet = "0.0.7"
specs = "0.15"
specs-derive = "0.4"
shred-derive = "0.6.1"
kurbo = "0.5.6"

[dev-dependencies]
piet-common = "0.0.7"
image = "0.22.3"
env_logger = "0.7.1"
