[package]
name = "arcs"
version = "0.3.1-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "An extensible framework for creating 2D CAD applications using the Entity-Component-System pattern."
repository = "https://github.com/Michael-F-Bryan/arcs"
keywords = ["cad", "geometry", "2d", "design"]
categories = ["graphics", "gui", "mathematics", "wasm"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

[badges]
travis-ci = { repository = "Michael-F-Bryan/arcs", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arcs-core = { path = "../core", features = ["ecs"] }
cgmath = "0.17.0"
euclid = "0.20"
kurbo = "0.6"
lazy_static = "1"
log = "0.4"
piet = "0.1"
shred = "0.10"
shred-derive = "0.6"
specs = "0.16"
specs-derive = "0.4"

[dev-dependencies]
piet-common = "0.1"
image = "0.22"
env_logger = "0.7"
