[package]
name = "arcs-core"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22"
specs = { version = "0.16.1", optional = true }

[features]
default = []
ecs = ["specs"]
