[package]
name = "arcs-demo"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
publish = false
description = "A WebAssembly demo for the arcs CAD library."
repository = "https://github.com/Michael-F-Bryan/arcs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.5.1"
wasm-bindgen = "^0.2.50"
futures = "^0.1.26"
arcs = { path = "../arcs" }
specs = "0.15.1"
piet-web = "0.0.7"
kurbo = "0.5.6"
web-sys = { version = "0.3.35", features = ["MouseEvent", "HtmlCanvasElement", "Node", "CanvasRenderingContext2d", "HtmlElement"] }
log = "0.4.8"
console_log = "0.1.2"
piet = "0.0.7"
euclid = "0.20.7"
bitflags = "1.2.1"

[profile.release]
lto = true
opt-level = 'z'
