[package]
name = "arcs-render"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcs-core = { path = "../core" }
rgb = "0.8.14"
web-sys = { version = "0.3.33", optional = true, features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
js-sys = { version = "0.3.33", optional = true }
wasm-bindgen = { version = "0.2.56", optional = true }
anyhow = "1.0.25"

[features]
default = ["html5-canvas"]
html5-canvas = ["web-sys", "js-sys", "wasm-bindgen"]
