[package]
name = "arcs-render"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcs-core = { path = "../core" }
anyhow = "1.0"
piet = "0.0.7"
specs-derive = "0.4"
specs = "0.15"
