[package]
name = "arcs-wasm-demo"
description = "An interactive demo for the arcs CAD library."
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
readme = "README.md"
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }
yew = "0.10.0"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
