[package]
name = "arcs-wasm-demo"
description = "An interactive demo for the arcs CAD library."
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
readme = "README.md"
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }
yew = "0.10.0"
arcs-render = { path = "../render" }
web-sys = { version = "0.3.22", features = ["console", "Window", "Document", "Element", "EventTarget"] }
anyhow = "1.0.25"
web_logger = "0.2.0"
log = "0.4.8"
js-sys = "0.3.33"
piet-web = "0.0.7"
kurbo = "0.5.6"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
