[package]
name = "arcs-wasm-demo"
description = "An interactive demo for the arcs CAD library."
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
readme = "README.md"
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
arcs = { path = "../arcs" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
kurbo = "0.5"
log = "0.4"
piet = "0.0.7"
piet-web = "0.0.7"
specs = "0.15"
wasm-bindgen = "0.2"
web_logger = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "EventTarget"] }
wee_alloc = { version = "0.4", optional = true }
yew = "0.10"

[dev-dependencies]
wasm-bindgen-test = "0.2"
futures = "0.1.27"
js-sys = "0.3"
wasm-bindgen-futures = "0.3"

[profile.release]
lto = true
